public/stylesheets/menu.css
/**
 * menu.css
 *
 * Contains the styles for the menu bar that spans the top of most OpenFISMA
 * screens.
 *
 * @author      Mark E. Haase <mhaase@endeavorsystems.com>
 * @todo        Cleanup, add comments
 * @copyright   (c) 2008 Endeavor Systems, Inc. (http://www.endeavorsystems.com)
 * @license     http://www.openfisma.org/mw/index.php?title=License
 * @version     $Id$
 */

/* The csshover.htc is a library which makes :hover attributes work in IE
work the way they are supposed to work in all browsers. Mozilla uses :hover
correctly, but IE needs this additional code (at least in IE5 and IE6) */
body {
	behavior:url("/javascripts/csshover.htc");
}

div#menu {
    margin-top:1em;
    background-color:#42637B;
    height: 40px;
}

div#menu ul {
    padding: 2px 0px;
    float:left;
    width:120px;
}

div#menu ul li a {
    width: 100%;
}

div#menu ul li a:hover {
    color: #42637B;
    background: #FFFFB5;
}

div#menu img {
    margin: 2px 5px;
    float: left;
}

div#menu ul ul {
    display:none;
    position: absolute;
    z-index: 500;
    width: 200px;
}

div#menu li:hover ul {
    display: block;
}

div#menu a, div#menu h2{
    display: block;
    margin: 0px;
    padding: 0px;
}

div#menu h2 a {
    font: bold 12px arial, helvetica, sans-serif;
    text-align: center;
    line-height: 1.8em;
}

div#menu a {
    font: 12px arial, helvetica, sans-serif;
    color: white;
    line-height:1.4em;
    background: #42637B;
    text-decoration: none;
}

div#menu ul ul a{
    background: #42637B url(../images/plus.gif) no-repeat 0.6em ;
    border-bottom:1px solid gray;
    padding:1px 1em 0px 1.8em;
}
div#menu ul ul a:hover {
    color: #42637B;
    background: #FFFFB5 url(../images/arrow.gif) no-repeat 0.6em ;
}

